It now remembers past conversations, made some minor changes to the UI

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="input-container">
         <div class="input-box">
-            <textarea placeholder="Write your prompt..." rows="1" id="userInput" maxlength="1000"></textarea>
+            <textarea autofocus ="Wise words go in here..." rows="1" id="userInput" maxlength="1000"></textarea>
             <div class="char-counter" id="charCounter">0/1000</div>
             <button class="send-button" onclick="sendMessage()" id="sendButton">
                 <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
