Worked more on making remember past history as well as made sure no additional text is involved in the response other than json

--- a/static/styles.css
+++ b/static/styles.css
@@ -377,3 +377,9 @@ textarea:focus {
         width: 32px;
     }
 }
+
+.welcome-message {
+    display: block;
+    margin: auto;
+    max-width: 600px;
+}
